--- a/backend/templates/partials/breadcrumbs.html
+++ b/backend/templates/partials/breadcrumbs.html
@@ -1,5 +1,5 @@
 <!-- ======= Breadcrumbs ======= -->
-<section class="breadcrumbs">
+<section class="breadcrumbs d-none d-md-block" >
   <div class="container">
     <ol>
       <li><a href="/">Strona Główna</a></li>
