--- a/backend/templates/partials/navigation.html
+++ b/backend/templates/partials/navigation.html
@@ -11,7 +11,11 @@
       <!--  PlayMaker - logo (jasne) - NotoSans _ medium.svg  -->
       <!--PlayMaker - logo (jasne) - NotoSans _ medium.png -->
       <a href="/" class="logo mr-auto"><img src="{% static 'assets/img/playmaker_logo_light.png' %}" alt="logo"></a>
-
+      {% if menus_heading_title %}
+        <span class="mr-auto d-block d-md-none"> <i class="main-color icofont-hand-drawn-right"></i> {{ menus_heading_title }} </span> 
+      {% endif %}
+      
+      
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <!--li class="active"><a href="#header">Home</a></li-->
