--- a/soccerbase/templates/soccerbase/base.html
+++ b/soccerbase/templates/soccerbase/base.html
@@ -1,4 +1,4 @@
-{% extends 'base_inner.html' %}
+{% extends 'base.html' %}
 
 {% load static %}
 
@@ -13,3 +13,5 @@
 {% block content %}
 
 {% endblock content %}
+{% block footer %}
+{% endblock %}
