--- a/soccerbase/templates/soccerbase/tables/teams_card.html
+++ b/soccerbase/templates/soccerbase/tables/teams_card.html
@@ -7,8 +7,8 @@
 {% for object in objects %}
 <div class="card item-card" style="">
   <div class="card-header d-md-none">
-    <span> <img class="flag" src="{{ object.profile.country.flag }}" alt="flag">{{object.first_name|upper}} {{ object.last_name|upper}} {{ object.profile.age|default:'-' }} {% if object.profile.age %}{% trans 'l.' %} {% endif %} {% if object.is_verified %}<i class="text-success icofont-verification-check"></i>{% endif %}
-    <span class="float-right"> <a href="#" class="">Obserwój</a> </span>
+    <span>{{ object.name|upper }}
+    <span class="float-right"> <a href="#" class="">Observe</a> </span>
   </div>
   <div class="d-md-none">
     <img class="avatar rounded-circle img-responsive" title="profile picture"  src="{% thumbnail object.picture|default:'default_profile.png' 'tables_avatar_show_small' %}">
@@ -20,23 +20,15 @@
         </div>
 
         <div class="d-none d-md-inline col-md-1">
-            <img class="flag" src="{{ object.profile.country.flag }}" alt="flag">{{object.first_name|upper}} {{ object.last_name|upper}} {% if object.is_verified %}<i class="text-success icofont-verification-check"></i>{% endif %}
+           {{ object.name|upper}}
         </div>
-
-        <div class="d-none d-md-inline col-md-1">
-            {{ object.profile.age|default:'-' }} {% if object.profile.age %}{% trans 'l.' %} {% endif %}
-        </div >
         
-        <div class="col-3 col-md-1">
-            {{ object.profile.get_position_raw_display|default:'-' }}
-        </div >
-        
-        <div class="col-3 col-md-1">
-            {{ object.profile.league|default:'-'|upper  }}
+        <div class="col-3 col-md">
+            {{ object.league|default:'-'|upper  }}
         </div >
 
         <div class="col-3 col-md-1"> 
-            {{ object.profile.team|default:'-'|upper  }}
+            {{ object.team|default:'-'|upper  }}
         </div>
 
         <div class="col-3 col-md-1">
@@ -60,12 +52,12 @@
         </div>
 
         <div class="d-none d-md-inline col-md-1">
-              <span class="float-right"> <a href="{{ object.profile.get_permalink }}"><i class="btn-pm btn-pm-sm icofont-user"></i></a></span>
+              <span class="float-right"> <a href="{{ object.get_permalink }}"><i class="btn-pm btn-pm-sm icofont-user"></i></a></span>
         </div>
     </div>
   </div>
   <div class="card-footer  d-md-none">
-    <span class="float-right"> <a href="{{ object.profile.get_permalink }}"><i class="btn-pm btn-pm-sm icofont-user"></i> zobacz profil</a></span>
+    <span class="float-right"> <a href="{{ object.get_permalink }}"><i class="btn-pm btn-pm-sm icofont-user"></i> zobacz profil</a></span>
   </div>
 </div>
 {% endfor %}
