--- a/profiles/templates/profiles/modals/_register_modal.html
+++ b/profiles/templates/profiles/modals/_register_modal.html
@@ -5,9 +5,9 @@
   <div class="modal-dialog modal-dialog-centered modal-fullscreen-sm-down">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">By skorzytać dołącz do naszej spoleczności.</h5>
+        <h5 class="modal-title" id="registerModalLabel">By skorzytać dołącz do naszej spoleczności.</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
+          <span aria-hidden="true"><i class="icofont-close-circled main-color"></i></span>
         </button>
       </div>
       <div class="modal-body">
