--- a/backend/static/assets/css/style.css
+++ b/backend/static/assets/css/style.css
@@ -189,7 +189,7 @@ button[type="submit"]:hover, input[type="button"]:hover{
   margin-top: 74px;
 } */
 main { 
-  margin-top: 74px;
+  margin-top: 65px;
 }
 
 @media all and (max-width: 992px) {   /* @todo to better understand */
@@ -208,7 +208,7 @@ main {
   background: #fff;
   transition: all 0.5s;
   z-index: 997;
-  padding: 10px 0;
+  padding: 5px 0;
   border-bottom:1px solid #e03a3c;
 }
 
@@ -253,7 +253,7 @@ main {
 --------------------------------------------------------------*/
 
 .navigation-avatar { 
-    border:1px solid red;
+    /* border:1px solid red; */
 }
 
 /* Desktop Navigation */
@@ -270,21 +270,24 @@ main {
 .nav-menu > ul > li {
   position: relative;
   white-space: nowrap;
-  padding: 10px 0 10px 28px;
+  padding: 12px 0 10px 12px;
+
 }
+
 
 .nav-menu a {
   display: block;
   position: relative;
   color: #111111;
   transition: 0.3s;
-  font-size: 15px;
+  font-size: 14px;
   font-weight: 600;
   font-family: "Raleway", sans-serif;
 }
 
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
   color: #e03a3c;
+  
 }
 
 
