--- a/backend/templates/partials/footer.html
+++ b/backend/templates/partials/footer.html
@@ -19,10 +19,10 @@
         <h4>Przydatne linki</h4>
         <ul>
             <li><i class="bx bx-chevron-right"></i> <a href="#">Strona Główna</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">O projekcie</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Produkty</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Regularmin</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Warunki prywatności</a></li>
         </ul>
         </div>
 
