--- a/profiles/templates/platform/navigation/_nav_club.html
+++ b/profiles/templates/platform/navigation/_nav_club.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% if user.is_authenticated %}
+    {% include 'platform/navigation/_nav.html'%}
     <li class="drop-down"><a href="">Bazy</a>
         <ul>
             <li><a href="{% url 'soccerbase:players' %}">Piłkarzy</a></li>
@@ -9,8 +10,6 @@
             <li><a href="{% url 'soccerbase:teams' %}">Klubów</a></li>
         </ul>
     </li>
-    <li><a href="{% url 'profiles:show_self'%}">{% trans 'Profil' %}</a></li>
-    <li><a href="{% url 'profiles:player_carrier'%}">{% trans 'Kariera' %}</a></li>
-    <li><a href="{% url 'profiles:player_fantasy'%}">{% trans 'Fantasy' %}</a></li>
-    <li><a href="{% url 'profiles:player_games'%}">{% trans 'Mecze' %}</a></li>
+
+    <li><a href="{% url 'profiles:player_carrier'%}">{% trans 'Club' %}</a></li>
 {% endif %}
