--- a/profiles/templates/profiles/banners/_banner.html
+++ b/profiles/templates/profiles/banners/_banner.html
@@ -15,9 +15,14 @@
 {% elif user.is_authenticated and user.profile.is_not_complete %}
 <div class="notification-banner">
   <div class="banner alert alert-danger" role="alert">
-    <strong>{% blocktrans with percentage=user.profile.percentage_completion%} Twój profil jest gotowy w  {{percentage}}%.{% endblocktrans %}</strong>{% trans 'Uzupełnij swoje CV by móc korzystać z wszelkich funkcjonalności platformy. <span class="d-none d-md-inline"> Stań się bardziej widoczny i zwiększ swoje szanse na znalezienie klubu na który zasługujesz!' %}</span> <a href="{% url 'profiles:edit_self' %}">{% trans 'edytuj CV' %}</a>
+    {% if user.is_player or user.is_coach or user.is_club %}
+      <strong>{% blocktrans with percentage=user.profile.percentage_completion%} Twój profil jest gotowy w  {{percentage}}%.{% endblocktrans %}</strong>{% trans 'Uzupełnij swoje CV by móc korzystać z wszelkich funkcjonalności platformy. <span class="d-none d-md-inline"> Stań się bardziej widoczny i zwiększ swoje szanse na znalezienie klubu na który zasługujesz!' %}</span> <a href="{% url 'profiles:edit_self' %}">{% trans 'edytuj CV' %}</a>
+    {% else %}
+      <strong>{% blocktrans with percentage=user.profile.percentage_completion%} Twój profil jest gotowy w  {{percentage}}%.{% endblocktrans %}</strong>{% trans 'Uzupełnij go by móc korzystać z wszelkich funkcjonalności platformy.' %}</span> <a href="{% url 'profiles:edit_self' %}">{% trans 'edytuj profil' %}</a>
+    {% endif %}
   </div>
 </div>
+
 {% endif %}
 
 
