--- a/profiles/templates/profiles/modals/_inquiry_modal.html
+++ b/profiles/templates/profiles/modals/_inquiry_modal.html
@@ -7,7 +7,7 @@
         <div class="modal-header">
           <h5 class="modal-title" id="{{ id }}Label">{{ title }}</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
+            <span aria-hidden="true"><i class="icofont-close-circled main-color"></i></span>
           </button>
         </div>
         <div class="modal-body">
