--- a/profiles/templates/profiles/modals/_verification_modal.html
+++ b/profiles/templates/profiles/modals/_verification_modal.html
@@ -10,30 +10,26 @@
       <div class="modal-header">
         <h3 class="modal-title" id="verificationModalLabel">{% trans 'Wymagana werifikacja konta' %}</h3>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
+          <span aria-hidden="true"><i class="icofont-close-circled main-color"></i></span>
         </button>
       </div>
 
 
       <div class="modal-body">
       <div>
-        By w pełni korzystać z platformy <strong>{% include 'profiles/partials/brandname.html' %}</strong> należy zwerifikować konto uzupełniając poniższe dane.
+        By w pełni korzystać z platformy <strong>{% include 'platform/partials/brandname.html' %}</strong> należy zwerifikować konto uzupełniając poniższe dane.
 
       </div>
     
+      <form id="verification-form" class="mt-3" enctype="multipart/form-data" action={% url 'profiles:account_verification' %} method="post">
+        {% csrf_token %}
+        <span id="verification-form-body"> </span>
 
-
-
-
-<form id="verification-form" class="mt-3" enctype="multipart/form-data" action={% url 'profiles:account_verification' %} method="post">
-  {% csrf_token %}
-  <span id="verification-form-body"> </span>
-
-  <div class="modal-footer">
-          <button class="btn-pm" type="submit" name="update" value="Update" id="submit-id-update">{% trans 'ZWERIFIKUJ KONTO' %}</button>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">{% trans 'PÓŹNIEJ' %}</button>
-        </div>
-</form>
+        <div class="modal-footer">
+                <button class="btn-pm" type="submit" name="update" value="Update" id="submit-id-update">{% trans 'ZWERIFIKUJ KONTO' %}</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">{% trans 'PÓŹNIEJ' %}</button>
+              </div>
+      </form>
 
 
 
