--- a/soccerbase/templates/soccerbase/base.html
+++ b/soccerbase/templates/soccerbase/base.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'platform/base.html' %}
 
 {% load static %}
 
@@ -13,5 +13,3 @@
 {% block content %}
 
 {% endblock content %}
-{% block footer %}
-{% endblock %}
