--- a/profiles/templates/profiles/modals/_need_verification.html
+++ b/profiles/templates/profiles/modals/_need_verification.html
@@ -18,7 +18,7 @@
 
       <div class="modal-body">
         <div>
-             Twoje konto jest w tym momencie werifikowane by w pełni korzystać z platformy <strong>{% include 'platform/partials/brandname.html' %}</strong> 
+             Twoje konto jest w tym momencie weryfikowane by w pełni korzystać z platformy <strong>{% include 'platform/partials/brandname.html' %}</strong> 
              
         </div>
         <div>
