--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -22,8 +22,8 @@
 
   {# Global stylesheets #}
   <!-- Favicons -->
-  <link href="{% static 'assets/img/PlayMaker - logo (ciemne) - NotoSans _ medium.svg' %}" rel="icon">
-  <link href="{% static 'assets/img/PlayMaker - logo (ciemne) - NotoSans _ medium.svg' %}" rel="apple-touch-icon">
+  <link href="{% static 'assets/img/playmaker_logo_dark.svg' %}" rel="icon">
+  <link href="{% static 'assets/img/playmaker_logo_dark.svg' %}" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com"> 
