--- a/profiles/templates/profiles/modals/_new_account_role_modal.html
+++ b/profiles/templates/profiles/modals/_new_account_role_modal.html
@@ -26,7 +26,7 @@
         </form>
       </div>
       <div class="modal-footer">
-        <hidden img width="30%" src="{% static 'assets/img/Soccer-amico.png' %}" alt="image_to_choice_role">
+        <hidden img width="30%" src="{% static 'assets/img/amico.png' %}" alt="image_to_choice_role">
         <button hidden type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>  <!-- @todo remove hiddens  -->
         <button hidden type="button" class="btn btn-primary">Save changes</button>  <!-- @todo remove hiddens  -->
       </div>
