--- a/profiles/templates/profiles/modals/_need_verification.html
+++ b/profiles/templates/profiles/modals/_need_verification.html
@@ -9,7 +9,7 @@
   <div class="modal-dialog modal-dialog-centered modal-fullscreen-sm-down">
     <div class="modal-content">
       <div class="modal-header">
-        <h3 class="modal-title" id="verificationNeededModalLabel">{% trans 'Oczekiwanie na werifikacje konta' %}</h3>
+        <h3 class="modal-title" id="verificationNeededModalLabel">{% trans 'Oczekiwanie na weryfikacje konta' %}</h3>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true"><i class="icofont-close-circled main-color"></i></span>
         </button>
@@ -21,7 +21,7 @@
              Twoje konto jest w tym momencie weryfikowane by w pełni korzystać z platformy <strong>{% include 'platform/partials/brandname.html' %}</strong> 
              
         </div>
-        <div>
+        <div class="mt-4">
           Jeśli długo czekasz  skontaktuj się z nami:
           <span class="text-muted">{% include 'platform/partials/contact_mail.html' %}</span>
         </div>
